# advent-of-code

./: .gitignore  README.md
2022/day01/gleam/: README.md  gleam.toml
2022/day02/c3/: README.md  project.json
2023/: README.md
2023/day01/rust/: README.md
2023/day02/zig/: README.md  build.zig  justfile
2023/day03/julia/: Manifest.toml  Project.toml  README.md  justfile
2023/day04/ocaml/: README.md  day04.opam  dune-project  justfile
2023/day04/ocaml/lib/: day04.ml  day04.mli  dune
2023/day05/haskell/: README.md  day05.cabal  justfile  package.yaml
2023/day06/ocaml/: README.md  day06.opam  dune-project  justfile
2023/day07/odin/: README.md  day07.odin  part1.odin  part2.odin
2023/day08/rust/: README.md
2023/day09/nim/: README.md  day09.nimble
2023/day10/cpp/: CMakeLists.txt  README.md  day10.cpp  day10_impl.cpp  day10_impl.hpp  day10_part1.cpp  day10_part1.hpp  day10_part2.cpp  day10_part2.hpp  day10_test.cpp  justfile
2023/day10/rust/: Cargo.toml
2023/day11/python/: README.md  day11.py  justfile  test.py
2023/day12/rust/: README.md
2023/day13/crystal/: README.md  justfile  shard.yml
2023/day14/ocaml/: README.md  day14.opam  dune-project  justfile
2023/day14/ocaml/lib/: day14.ml  dune
2023/day15/rust/: README.md
2023/day15/swift/: Package.swift  README.md  justfile
2023/day16/nim/: README.md  day16.nimble  justfile
2023/day16/ocaml/: README.md  dune-project  justfile
2023/day17/rust/: Cargo.toml  README.md
2023/day18/rust/: README.md
2023/day19/rust/: README.md
2023/day20/rust/: README.md
day02/zig/: build.zig
(+59 files in other folders)
